Agrego un parrafo

--- a/animacionCanvas.html
+++ b/animacionCanvas.html
@@ -83,5 +83,6 @@
 		Su navegador no soporta el elemento canvas
 	</canvas>
 
+	<p>Puse un comentario para ver como es el rollo</p>
 </body>
 </html>
