agrego otro parrafo

--- a/animacionCanvas.html
+++ b/animacionCanvas.html
@@ -84,5 +84,6 @@
 	</canvas>
 
 	<p>Puse un comentario para ver como es el rollo</p>
+	<p>Puse un comentario para ver como es el rollo otra vez</p>
 </body>
 </html>
