agrego tercer parrafo

--- a/animacionCanvas.html
+++ b/animacionCanvas.html
@@ -85,5 +85,6 @@
 
 	<p>Puse un comentario para ver como es el rollo</p>
 	<p>Puse un comentario para ver como es el rollo otra vez</p>
+	<p>Tercer párrafo</p>
 </body>
 </html>
