--- a/animacionCanvas.html
+++ b/animacionCanvas.html
@@ -6,7 +6,7 @@
 
 	<style>
 		#lienzo{
-			border: 1px solid #F00;
+			border: 1px solid #000;
 		}
 	</style>
 
@@ -84,7 +84,6 @@
 	</canvas>
 
 	<p>Puse un comentario para ver como es el rollo</p>
-	<p>Puse un comentario para ver como es el rollo otra vez</p>
-	<p>Tercer párrafo</p>
+	<p>Probando Texto</p>
 </body>
 </html>
