texto de aprendiendo gitHub

--- a/animacionCanvas.html
+++ b/animacionCanvas.html
@@ -85,5 +85,6 @@
 
 	<p>Puse un comentario para ver como es el rollo</p>
 	<p>Probando Texto</p>
+	<p>Se aprende el uso de github</p>
 </body>
 </html>
