Agrego texto con ramas GitHub

--- a/animacionCanvas.html
+++ b/animacionCanvas.html
@@ -86,5 +86,6 @@
 	<p>Puse un comentario para ver como es el rollo</p>
 	<p>Probando Texto</p>
 	<p>Se aprende el uso de github</p>
+	<p>Se prueba ramas en gitHub</p>
 </body>
 </html>
